# trantor_ai_assignment

./: README.md  pyproject.toml
trantor_ai_assignment/: .env.example  celery_app.py  celery_config.py  database.py  main.py  middlewares.py  settings.py
trantor_ai_assignment/openai_app/: models.py  openai_client.py  routes.py  schemas.py  tasks.py  utils.py
trantor_ai_assignment/openai_app/services/: database_service.py  openai_processors.py  openai_service.py  task_service.py
trantor_ai_assignment/openai_app/tests/: test_routes.py
